...
    }
    
    func show(quiz result: QuizResultsViewModel, completion: @escaping () -> Void) {
        let alertModel = AlertModel(title: result.title,
                                    message: result.message,
                                    buttonText: result.buttonText,
                                    accessibilityIdentifier: "Game Results",
                                    completion: completion)
        AlertPresenter(controller: self).showAlert(model: alertModel)
    }
    
    func showNetworkError(completion: @escaping () -> Void) {
        let alertModel = AlertModel(title: "Что-то пошло не так(",
...
